--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,7 @@
             ]
         }
     },
-    "require": {}
+    "require": {},
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
