--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         }
     },
     "require": {
-        "group6/contactform": "1.0.*"
+        
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
